<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".Views.Autorization.RegisterActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/register_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_weight="30"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/layout_search"
        android:textSize="20sp"
        android:layout_weight="10"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/surname_str"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:background="@drawable/layout_search"
        android:textSize="20sp"
        android:layout_weight="10"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/name_str"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:background="@drawable/layout_search"
        android:textSize="20sp"
        android:layout_weight="10"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_patronymic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/patronymic_str"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:background="@drawable/layout_search"
        android:textSize="20sp"
        android:layout_weight="10"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:background="@drawable/layout_search"
        android:textSize="20sp"
        android:layout_weight="10"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/et_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/bithdate_str"
        android:background="@drawable/layout_search"
        android:textSize="20sp"
        android:layout_weight="10"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="15dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_bt"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:layout_weight="2"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/str_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/to_login_str"
        android:textSize="17sp"
        android:layout_weight="5"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>